src/cbor/libqcborvalue.bf

public struct QCborValueConstRef
{
	[LinkName("QCborValueConstRef_new")]
	public static extern void* QCborValueConstRef_new(QCborValueConstRef other);
	[LinkName("QCborValueConstRef_new2")]
	public static extern void* QCborValueConstRef_new2(QCborValueConstRef param1);
	[LinkName("QCborValueConstRef_ToQCborValue")]
	public static extern QCborValue QCborValueConstRef_ToQCborValue(void* c_this);
	[LinkName("QCborValueConstRef_Type")]
	public static extern int64 QCborValueConstRef_Type(void* c_this);
	[LinkName("QCborValueConstRef_IsInteger")]
	public static extern bool QCborValueConstRef_IsInteger(void* c_this);
	[LinkName("QCborValueConstRef_IsByteArray")]
	public static extern bool QCborValueConstRef_IsByteArray(void* c_this);
	[LinkName("QCborValueConstRef_IsString")]
	public static extern bool QCborValueConstRef_IsString(void* c_this);
	[LinkName("QCborValueConstRef_IsArray")]
	public static extern bool QCborValueConstRef_IsArray(void* c_this);
	[LinkName("QCborValueConstRef_IsMap")]
	public static extern bool QCborValueConstRef_IsMap(void* c_this);
	[LinkName("QCborValueConstRef_IsTag")]
	public static extern bool QCborValueConstRef_IsTag(void* c_this);
	[LinkName("QCborValueConstRef_IsFalse")]
	public static extern bool QCborValueConstRef_IsFalse(void* c_this);
	[LinkName("QCborValueConstRef_IsTrue")]
	public static extern bool QCborValueConstRef_IsTrue(void* c_this);
	[LinkName("QCborValueConstRef_IsBool")]
	public static extern bool QCborValueConstRef_IsBool(void* c_this);
	[LinkName("QCborValueConstRef_IsNull")]
	public static extern bool QCborValueConstRef_IsNull(void* c_this);
	[LinkName("QCborValueConstRef_IsUndefined")]
	public static extern bool QCborValueConstRef_IsUndefined(void* c_this);
	[LinkName("QCborValueConstRef_IsDouble")]
	public static extern bool QCborValueConstRef_IsDouble(void* c_this);
	[LinkName("QCborValueConstRef_IsDateTime")]
	public static extern bool QCborValueConstRef_IsDateTime(void* c_this);
	[LinkName("QCborValueConstRef_IsUrl")]
	public static extern bool QCborValueConstRef_IsUrl(void* c_this);
	[LinkName("QCborValueConstRef_IsRegularExpression")]
	public static extern bool QCborValueConstRef_IsRegularExpression(void* c_this);
	[LinkName("QCborValueConstRef_IsUuid")]
	public static extern bool QCborValueConstRef_IsUuid(void* c_this);
	[LinkName("QCborValueConstRef_IsInvalid")]
	public static extern bool QCborValueConstRef_IsInvalid(void* c_this);
	[LinkName("QCborValueConstRef_IsContainer")]
	public static extern bool QCborValueConstRef_IsContainer(void* c_this);
	[LinkName("QCborValueConstRef_IsSimpleType")]
	public static extern bool QCborValueConstRef_IsSimpleType(void* c_this);
	[LinkName("QCborValueConstRef_IsSimpleTypeWithSt")]
	public static extern bool QCborValueConstRef_IsSimpleTypeWithSt(void* c_this, void st);
	[LinkName("QCborValueConstRef_ToSimpleType")]
	public static extern void QCborValueConstRef_ToSimpleType(void* c_this);
	[LinkName("QCborValueConstRef_Tag")]
	public static extern void QCborValueConstRef_Tag(void* c_this);
	[LinkName("QCborValueConstRef_TaggedValue")]
	public static extern QCborValue QCborValueConstRef_TaggedValue(void* c_this);
	[LinkName("QCborValueConstRef_ToInteger")]
	public static extern int64 QCborValueConstRef_ToInteger(void* c_this);
	[LinkName("QCborValueConstRef_ToBool")]
	public static extern bool QCborValueConstRef_ToBool(void* c_this);
	[LinkName("QCborValueConstRef_ToDouble")]
	public static extern double QCborValueConstRef_ToDouble(void* c_this);
	[LinkName("QCborValueConstRef_ToByteArray")]
	public static extern uint8[] QCborValueConstRef_ToByteArray(void* c_this);
	[LinkName("QCborValueConstRef_ToString")]
	public static extern char8[] QCborValueConstRef_ToString(void* c_this);
	[LinkName("QCborValueConstRef_ToDateTime")]
	public static extern QDateTime QCborValueConstRef_ToDateTime(void* c_this);
	[LinkName("QCborValueConstRef_ToUrl")]
	public static extern QUrl QCborValueConstRef_ToUrl(void* c_this);
	[LinkName("QCborValueConstRef_ToRegularExpression")]
	public static extern QRegularExpression QCborValueConstRef_ToRegularExpression(void* c_this);
	[LinkName("QCborValueConstRef_ToUuid")]
	public static extern QUuid QCborValueConstRef_ToUuid(void* c_this);
	[LinkName("QCborValueConstRef_ToArray")]
	public static extern QCborArray QCborValueConstRef_ToArray(void* c_this);
	[LinkName("QCborValueConstRef_ToArrayWithQCborArray")]
	public static extern QCborArray QCborValueConstRef_ToArrayWithQCborArray(void* c_this, QCborArray a);
	[LinkName("QCborValueConstRef_ToMap")]
	public static extern QCborMap QCborValueConstRef_ToMap(void* c_this);
	[LinkName("QCborValueConstRef_ToMapWithQCborMap")]
	public static extern QCborMap QCborValueConstRef_ToMapWithQCborMap(void* c_this, QCborMap m);
	[LinkName("QCborValueConstRef_OperatorSubscript")]
	public static extern QCborValue QCborValueConstRef_OperatorSubscript(void* c_this, char8[] key);
	[LinkName("QCborValueConstRef_OperatorSubscript2")]
	public static extern QCborValue QCborValueConstRef_OperatorSubscript2(void* c_this, int64 key);
	[LinkName("QCborValueConstRef_Compare")]
	public static extern int32 QCborValueConstRef_Compare(void* c_this, QCborValue other);
	[LinkName("QCborValueConstRef_OperatorEqual")]
	public static extern bool QCborValueConstRef_OperatorEqual(void* c_this, QCborValue other);
	[LinkName("QCborValueConstRef_OperatorNotEqual")]
	public static extern bool QCborValueConstRef_OperatorNotEqual(void* c_this, QCborValue other);
	[LinkName("QCborValueConstRef_OperatorLesser")]
	public static extern bool QCborValueConstRef_OperatorLesser(void* c_this, QCborValue other);
	[LinkName("QCborValueConstRef_ToVariant")]
	public static extern QVariant QCborValueConstRef_ToVariant(void* c_this);
	[LinkName("QCborValueConstRef_ToJsonValue")]
	public static extern QJsonValue QCborValueConstRef_ToJsonValue(void* c_this);
	[LinkName("QCborValueConstRef_ToCbor")]
	public static extern uint8[] QCborValueConstRef_ToCbor(void* c_this);
	[LinkName("QCborValueConstRef_ToCborWithWriter")]
	public static extern void QCborValueConstRef_ToCborWithWriter(void* c_this, QCborStreamWriter writer);
	[LinkName("QCborValueConstRef_ToDiagnosticNotation")]
	public static extern char8[] QCborValueConstRef_ToDiagnosticNotation(void* c_this);
	[LinkName("QCborValueConstRef_ToSimpleType1")]
	public static extern void QCborValueConstRef_ToSimpleType1(void* c_this, void defaultValue);
	[LinkName("QCborValueConstRef_Tag1")]
	public static extern void QCborValueConstRef_Tag1(void* c_this, void defaultValue);
	[LinkName("QCborValueConstRef_TaggedValue1")]
	public static extern QCborValue QCborValueConstRef_TaggedValue1(void* c_this, QCborValue defaultValue);
	[LinkName("QCborValueConstRef_ToInteger1")]
	public static extern int64 QCborValueConstRef_ToInteger1(void* c_this, int64 defaultValue);
	[LinkName("QCborValueConstRef_ToBool1")]
	public static extern bool QCborValueConstRef_ToBool1(void* c_this, bool defaultValue);
	[LinkName("QCborValueConstRef_ToDouble1")]
	public static extern double QCborValueConstRef_ToDouble1(void* c_this, double defaultValue);
	[LinkName("QCborValueConstRef_ToByteArray1")]
	public static extern uint8[] QCborValueConstRef_ToByteArray1(void* c_this, uint8[] defaultValue);
	[LinkName("QCborValueConstRef_ToString1")]
	public static extern char8[] QCborValueConstRef_ToString1(void* c_this, char8[] defaultValue);
	[LinkName("QCborValueConstRef_ToDateTime1")]
	public static extern QDateTime QCborValueConstRef_ToDateTime1(void* c_this, QDateTime defaultValue);
	[LinkName("QCborValueConstRef_ToUrl1")]
	public static extern QUrl QCborValueConstRef_ToUrl1(void* c_this, QUrl defaultValue);
	[LinkName("QCborValueConstRef_ToRegularExpression1")]
	public static extern QRegularExpression QCborValueConstRef_ToRegularExpression1(void* c_this, QRegularExpression defaultValue);
	[LinkName("QCborValueConstRef_ToUuid1")]
	public static extern QUuid QCborValueConstRef_ToUuid1(void* c_this, QUuid defaultValue);
	[LinkName("QCborValueConstRef_ToCbor1")]
	public static extern uint8[] QCborValueConstRef_ToCbor1(void* c_this, int64 opt);
	[LinkName("QCborValueConstRef_ToCbor2")]
	public static extern void QCborValueConstRef_ToCbor2(void* c_this, QCborStreamWriter writer, int64 opt);
	[LinkName("QCborValueConstRef_ToDiagnosticNotation1")]
	public static extern char8[] QCborValueConstRef_ToDiagnosticNotation1(void* c_this, int64 opt);
}
